tests/src/frontend/syntax/invalid/foreachfield_arg2.sk

base class B {
  macro fun m(): void {
    #forEachField(#field, #a, #b) a
  }
}

fun main(): void {
  print_string("FAIL");
}
